[NO ISSUE][STO] Fix search when switching from memory to disk component
- user model changes: no
- storage format changes: no
- interface changes: no

Details:
- When searching the index and making the switch from the memory
  components to the disk components, keep the states of the queue and
  the cursors on the switched-to disk components the same as their
  states were on the memory components. If a cursor was the one who
  produced the outputElement, then do not push the next element into
  the queue from the cursor since there should not be an element in
  the queue from this cursor. Restart the search operation at the
  elements that the cursors were at and consume them since they were
  already consumed before we make the switch.

- add test case.

Change-Id: I647641f6044c1edf1477049be1c5d1b697f404c1
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/14885
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Murtadha Hubail <mhubail@apache.org>